removed deprecated links

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
                     <h1 class="modalHeading">WORK</h1>
                 </div>
                 <div class="uk-container workModalContent">
-                    <div class="uk-grid-collapse uk-grid-divider uk-child-width-1-2@s" uk-grid>
-                        <div class="aboutLeft  ">
+                    <div class="uk-grid-collapse uk-grid-divider uk-child-width-1-1@s" uk-grid>
+                        <div class="aboutLeft">
                             <h1 class="modalSubHeading uk-text-center">Research Works</h1>
-                            <ul class="uk-list" style="padding-top: 20px">
+                            <ul class="uk-list uk-text-center" style="padding-top: 20px">
                                 <!-- paper -->
                                 <li><a href="https://drive.google.com/file/d/1qubOxU9CbiVL_ZPT0kTVvk_rD11W_S3j/view?usp=sharing"
                                         target="_blank" class="uk-link-reset">
@@ -230,67 +230,7 @@
 
                             </ul>
                         </div>
-                        <div class="aboutRight">
-                            <h1 class="modalSubHeading uk-text-center">Notable Projects</h1>
-                            <ul class="uk-list" style="padding-top: 20px">
-                                <!-- Project 4 -->
-                                <li><a href="https://github.com/vatsalsaglani/xrayimage_extractfeatures" target="_blank"
-                                        class="uk-link-reset">
-
-                                        <h3 class="uk-text-centet"
-                                            style="color: white; font-family: 'Righteous', cursive;">A Python package to
-                                            extract features from X-ray/medical images.
-
-                                        </h3>
-
-                                    </a>
-                                </li>
-                                <!-- /Project 4 -->
-                                <!-- Project 1 -->
-                                <li><a href="https://github.com/vatsalsaglani/Book-Recommendation-System-using-Sentiment-Analysis"
-                                        target="_blank" class="uk-link-reset">
-
-                                        <h3 class="uk-text-centet"
-                                            style="color: white; font-family: 'Righteous', cursive;">Book
-                                            Recommendation using Sentiment Analysis
-                                            and NoSQL database.
-
-                                        </h3>
-
-                                    </a>
-                                </li>
-                                <!-- /Project 1 -->
-
-                                <!-- Project 2 -->
-                                <li><a href="https://github.com/vatsalsaglani/connection" target="_blank"
-                                        class="uk-link-reset">
-
-                                        <h3 class="uk-text-centet"
-                                            style="color: white; font-family: 'Righteous', cursive;">Connection
-                                            - A Social networking web application
-                                            using Ruby on Rails.
-                                        </h3>
-
-                                    </a>
-                                </li>
-                                <!-- /Project 2 -->
-
-                                <!-- Project 3 -->
-                                <li><a href="https://github.com/vatsalsaglani/nodejsSocialMediaApi" target="_blank"
-                                        class="uk-link-reset">
-
-                                        <h3 class="uk-text-centet"
-                                            style="color: white; font-family: 'Righteous', cursive;">NodeJS
-                                            Social Media API.
-                                        </h3>
-
-                                    </a>
-                                </li>
-                                <!-- /Project 3 -->
-
-
-                            </ul>
-                        </div>
+                        
                     </div>
 
                     <div class="uk-text-center uk-margin-large coffeeCode">
@@ -439,34 +379,30 @@
                 </div>
                 <div class="uk-container uk-container-small uk-align-center">
                     <ul class="uk-list uk-text-center">
-                        <li>shoot a <a href="mailto:youknowiamtrying@gmail.com" target="_blank"
+                        <li>shoot a <a href="mailto:saglanivatsal@gmail.com" target="_blank"
                                 uk-icon="icon: mail; ratio: 2"></a></li>
-                        <li><del>friend me on <a href="https://www.facebook.com/theVatsal.saglani" target="_blank"
+                        <!-- <li><del>friend me on <a href="https://www.facebook.com/theVatsal.saglani" target="_blank"
                                     uk-icon="icon: facebook; ratio: 2"></a></del><span class="uk-badge"
                                 style="background-color: red">X</span></li>
                         <li><del>follow me on <a href="https://www.instagram.com/thevatsalsaglani/" target="_blank"
                                     uk-icon="icon: instagram; ratio: 2"></a></del> <span class="uk-badge"
-                                style="background-color: red">X</span></li>
-                        <li>we can endorse each other on <a href="https://www.linkedin.com/in/vatsalsaglani/"
+                                style="background-color: red">X</span></li> -->
+                        <li>let's connect on <a href="https://www.linkedin.com/in/vatsalsaglani/"
                                 target="_blank" uk-icon="icon: linkedin; ratio: 2"></a></li>
-                        <li><del>don't bother searching me on</del>, retweet my tweets or mention me on <a
+                        <li>retweet my tweets or mention me on <a
                                 href="https://twitter.com/thevatsal_s" target="_blank"
                                 uk-icon="icon: twitter; ratio: 2"></a></li>
-                        <li>wait I am on <a href="https://thevatsalsaglani.tumblr.com" target="_blank"
-                                uk-icon="icon: tumblr; ratio: 2"></a></li>
-                        <li>or...</li>
-                        <li>text me on <a href="tel: +91 9790960353" target="_blank"
+                        <!-- <li>wait I am on <a href="https://thevatsalsaglani.tumblr.com" target="_blank"
+                                uk-icon="icon: tumblr; ratio: 2"></a></li> -->
+                        <!-- <li>or...</li> -->
+                        <li>reach out to me via. <a href="tel: +91 9790960353" target="_blank"
                                 uk-icon="icon: whatsapp; ratio: 2"></a></li>
 
                         <ul>
                             <li>ooh, also don't forget to check out <a
-                                    href="https://drive.google.com/file/d/1Vo2R4J4wNOW_7r_6yXT1Ms5FUHJxB-8p/view"
+                                    href="https://www.notion.so/Vatsal-Saglani-3158d99f879a48c78236925b525c2df0"
                                     target="_blankl" uk-icon="icon: file-pdf; ratio: 1.0"
-                                    uk-tooltip="title: RESUME BRIEF; pos: right; animation: uk-animation-kenburns; duration: 1500"></a>,
-                            </li>
-                            <li><a href="https://drive.google.com/open?id=1fsGQioPgIqzlSc2TaKKN_8E77TfB33kb"
-                                    target="_blankl" uk-icon="icon: file-pdf; ratio: 2.5"
-                                    uk-tooltip="title: RESUME; pos: right; animation: uk-animation-kenburns; duration: 1500"></a>
+                                    uk-tooltip="title: RESUME; pos: right; animation: uk-animation-kenburns; duration: 1500"></a>,
                             </li>
                         </ul>
 
